# crawl4ai-exp-project-v1

./: .gitignore  README.md  output.md  pyproject-org.toml  pyproject.toml  site_config.json
_old_keep/: main.py  smart_crawler-1.py  smart_crawler-v1-no-crawl4ai.py  smart_crawler.py
_old_keep/rag_pipeline_org/: vectorize_one_file.py
_vector-dbs/cyberizegroup-com-vdb/: chroma.sqlite3
discover_site/: discover-1.py  discover.py  sitemap_utils.py
discover_site_structure/: discover-1.py  discover-2.py  discover.py  sitemap_utils-1.py
outputs/: discovered_pages-1.json  discovered_pages_final.json
outputs/json/: cyberizegroup-com-full-seo-audit.json  cyberizegroup-com-general-policies.json  cyberizegroup-com-growth-call.json  cyberizegroup-com-our-partners.json  cyberizegroup-com-ppc.json  cyberizegroup-com-privacy-policy.json  cyberizegroup-com-refund-cancellation-policy.json  cyberizegroup-com-seo-services.json
outputs/pages/: cyberizegroup-com-full-seo-audit.md  cyberizegroup-com-general-policies.md  cyberizegroup-com-growth-call.md  cyberizegroup-com-our-partners.md  cyberizegroup-com-ppc.md  cyberizegroup-com-privacy-policy.md  cyberizegroup-com-refund-cancellation-policy.md  cyberizegroup-com-seo-services.md  cyberizegroup-com-web-development.md  cyberizegroup-com-website-design.md  cyberizegroup-com.md  (+1 more)
rag_pipeline/: vectorize_all-1.py  vectorize_all.py
scripts/: init-folders.sh
smart_crawler/: crawler.py  data_processing-1.py  data_processing-2.py  data_processing-3-gemini.py  data_processing.py  schema.py
utils/: global_llm.py
(+12 files in other folders)
